--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,4 +33,6 @@ test:
 publish:
   stage: publish
   script:
-    - TWINE_PASSWORD="$PYPI_TEST_TOKEN" TWINE_USERNAME=__token__ python -m twine upload --repository testpypi dist/*
+    - TWINE_PASSWORD=$PYPI_TEST_TOKEN TWINE_USERNAME=__token__ python -m twine --verbose upload --repository testpypi dist/*
+  # rules:
+  #   - if: $CI_COMMIT_TAG
