--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ test:
 publish:
   stage: publish
   script:
-    - TWINE_PASSWORD=$PYPI_TEST_TOKEN TWINE_USERNAME=__token__ python -m twine upload --verbose --repository testpypi dist/*
-  # rules:
-  #   - if: $CI_COMMIT_TAG
+    # - TWINE_PASSWORD=$PYPI_TEST_TOKEN TWINE_USERNAME=__token__ python -m twine upload --verbose --repository testpypi dist/*
+    - TWINE_PASSWORD=$PYPI_TOKEN TWINE_USERNAME=__token__ python -m twine upload dist/*
+  rules:
+    - if: $CI_COMMIT_TAG
