--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: python
+image: python:3
 
 stages:
   - build
@@ -14,7 +14,7 @@ cache:
 
 before_script:
   - python --version
-  - python -m pip install --upgrade pip build twine
+  - python -m pip install --upgrade pip build twine id
 
 build:
   stage: build
@@ -33,8 +33,24 @@ test:
 
 publish:
   stage: publish
+  id_tokens:
+    PYPI_ID_TOKEN:
+      aud: testpypi
+      # aud: pypi
   script:
     # - TWINE_PASSWORD=$PYPI_TEST_TOKEN TWINE_USERNAME=__token__ python -m twine upload --verbose --repository testpypi dist/*
-    - TWINE_PASSWORD=$PYPI_TOKEN TWINE_USERNAME=__token__ python -m twine upload dist/*
-  rules:
-    - if: $CI_COMMIT_TAG
+    # - TWINE_PASSWORD=$PYPI_TOKEN TWINE_USERNAME=__token__ python -m twine upload dist/*
+
+    # Install dependencies
+    - apt-get update && apt-get install -y jq
+    # Retrieve the OIDC token from GitLab CI/CD, and exchange it for a PyPI API token
+    - server="https://test.pypi.org"
+    # - server="https://pypi.org"
+    - oidc_token=$(python -m id PYPI)
+    - resp=$(curl -X POST ${server}/_/oidc/mint-token -d "{\"token\":\"${oidc_token}\"}")
+    - api_token=$(jq --raw-output '.token' <<< "${resp}")
+    # Upload to PyPI authenticating via the newly-minted token
+    - twine upload --repository testpypi -u __token__ -p "$api_token" dist/*
+    # - twine upload -u __token__ -p "$api_token" dist/*
+  # rules:
+  #   - if: $CI_COMMIT_TAG
