--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ publish:
     - resp=$(curl -X POST ${server}/_/oidc/mint-token -d "{\"token\":\"${oidc_token}\"}")
     - api_token=$(jq --raw-output '.token' <<< "${resp}")
     # Upload to PyPI authenticating via the newly-minted token
-    - twine upload --repository testpypi -u __token__ -p "$api_token" dist/*
+    - twine upload --verbose --repository testpypi -u __token__ -p "$api_token" dist/*
     # - twine upload -u __token__ -p "$api_token" dist/*
   # rules:
   #   - if: $CI_COMMIT_TAG
