--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,6 @@ publish:
     - api_token=$(jq --raw-output '.token' <<< "${resp}")
     # Upload to PyPI authenticating via the newly-minted token
     # - twine upload --verbose --repository testpypi -u __token__ -p "$api_token" dist/*
-    - twine upload -u __token__ -p "$api_token" dist/*
+    - twine upload --verbose -u __token__ -p "$api_token" dist/*
   rules:
     - if: $CI_COMMIT_TAG
