--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ publish:
     - resp=$(curl -X POST ${server}/_/oidc/mint-token -d "{\"token\":\"${oidc_token}\"}")
     - api_token=$(jq --raw-output '.token' <<< "${resp}")
     # Upload to PyPI authenticating via the newly-minted token
-    # - twine upload --verbose --repository testpypi -u __token__ -p "$api_token" dist/*
-    - twine upload --verbose -u __token__ -p "$api_token" dist/*
+    # - TWINE_USERNAME=__token__ TWINE_PASSWORD="$api_token" twine upload --verbose --repository testpypi dist/*
+    - TWINE_USERNAME=__token__ TWINE_PASSWORD="$api_token" twine upload --verbose dist/*
   rules:
     - if: $CI_COMMIT_TAG
