--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
@@ -35,8 +36,8 @@ jobs:
           name: dist
           path: dist
       - run: |
-          python -m pip install dist/*.whl
           python -m unittest -b
+          python -m pip install dist/*.whl
           python -m twine check dist/*
         
   publish-test:
