fix sphinx version

--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -13,9 +13,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build HTML
-      uses: ammaraskar/sphinx-action@master
+      uses: ammaraskar/sphinx-action@6.1.0
       with:
-        pre-build-command: "python3 -m pip install .[docs]"
+        pre-build-command: "python3 -m pip --upgrade install .[docs]"
         build-command: "sphinx-build -b html ./source ./build"
         docs-folder: "sphinx/"
 
